# github-wow-addon-catalogue

./: .gitignore  DEVELOP.md  README.md  addons.csv  cataloguer.py  collect.py  install.sh  noxfile.py  pyproject.toml  requirements.txt  runs.json
.github/: update.yaml
.github/workflows/: summarise-pr-changes.yaml
cataloguer/: __init__.py  __main__.py  _http_cache.py
