[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "cataloguer"
version = "0.1.0"
description = "Script which collects WoW add-on metadata from GitHub"
requires-python = ">= 3.11"
license.file = "LICENSE"
dependencies = [
  "aiohttp",
  "aiohttp-client-cache >= 0.8.0",
  "cattrs",
  "click",
  "structlog",
  "yarl",
]

[project.optional-dependencies]
dev = [
  "black",
  "poethepoet",
  "ruff",
]

[tool.black]
line-length = 99

[tool.pyright]
strict = ["cataloguer.py"]

[tool.ruff]
select = [
  "A",    # flake8-builtins
  "B0",   # flake8-bugbear excl. opinionated rules
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
]
line-length = 99
target-version = "py311"

[tool.poe.env]
__POE_TARGET = "cataloguer.py"

[tool.poe.tasks]
_black = "black $__POE_TARGET"
_isort = "ruff --select I --fix $__POE_TARGET"
format.sequence = [
  "_black",
  "_isort",
]
lint = "ruff --format grouped --show-source $__POE_TARGET"

[tool.poe.tasks.install]
shell = """
set -e

rm -rf venv
python -m venv venv
venv/bin/python -m pip install -e .[dev]
"""

[tool.poe.tasks.run]
cmd = "venv/bin/python -m cataloguer collect --merge"
