[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "cataloguer"
version = "0.1.0"
description = "Script which collects WoW add-on metadata from GitHub"
requires-python = ">= 3.11"
license.file = "LICENSE"
dependencies = [
  "aiohttp",
  "aiohttp-client-cache >= 0.8.0",
  "attrs",
  "cattrs",
  "click",
  "structlog",
  "yarl",
]

[project.optional-dependencies]
dev = [
  "poethepoet",
  "ruff",
]

[project.entry-points."pipx.run"]
cataloguer = "cataloguer:cli"

[tool.pyright]
strict = ["cataloguer.py"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B0",   # flake8-bugbear excl. opinionated rules
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
]

[tool.poe.env]
__POE_TARGET = "cataloguer.py"

[tool.poe.tasks]
_black = "ruff format $__POE_TARGET"
_isort = "ruff --select I --fix $__POE_TARGET"
format.sequence = [
  "_black",
  "_isort",
]
lint = "ruff --output-format grouped --show-source $__POE_TARGET"
