[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "cataloguer"
version = "0.1.0"
description = "Script which collects WoW add-on metadata from GitHub"
requires-python = ">= 3.12"
license.file = "LICENSE"
dependencies = [
  "aiohttp",
  "aiohttp-client-cache",
  "attrs",
  "cattrs",
  "click",
  "diskcache",
  "structlog",
  "yarl",
]

[dependency-groups]
dev = ["basedpyright", { include-group = "lint" }, { include-group = "typing" }]
format = ["ruff"]
lint = [{ include-group = "format" }]
typing = ["diskcache-stubs"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B0",    # flake8-bugbear (without opinionated rules)
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RUF",   # ruff
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle
  "YTT",   # flake8-2020
]

[tool.pyright]
typeCheckingMode = "strict"
# strict = ["cataloguer.py"]
